# space_robotics_bench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  package.xml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/: demo.bash  dev.bash  run.bash
.docker/host/: extract_isaac_sim.bash
.docker/hpc/: run.bash
.github/workflows/: pre-commit.yml  python.yml  rust.yml
apps/: srb.barebones.kit  srb.headless.kit  update_assets.bash
config/: env.yaml
crates/space_robotics_bench/: Cargo.toml
crates/space_robotics_bench/src/: lib.rs
crates/space_robotics_bench_gui/: Cargo.toml
crates/space_robotics_bench_gui/src/: app.rs  config.rs
crates/space_robotics_bench_py/src/: lib.rs
crates/srb_gui/: Cargo.toml
crates/srb_gui/src/: app.rs  config.rs  env_cfg.rs
docs/: book.toml
docs/src/getting_started/: install_native.md  requirements.md  usage.md
docs/src/misc/: attributions.md
hyperparams/: dreamerv3.yaml
hyperparams/sb3/: a2c.yaml  ppo.yaml  ppo_lstm.yaml  td3.yaml  tqc.yaml  trpo.yaml
hyperparams/sbx/: ppo.yaml  td3.yaml  tqc.yaml
hyperparams/skrl/: ppo.yaml  ppo_rnn.yaml
launch/: demo.launch.py
scripts/: _cli_utils.py  gui.bash  install_isaaclab.bash  install_isaacsim.bash  list_envs.py  random_agent.py  ros2.py  teleop.py  zero_agent.py
scripts/algo/dreamerv3/: play.py  train.py
scripts/algo/robomimic/: collect.py  train.py
scripts/algo/sb3/: play.py  train.py
scripts/utils/: clean_procgen_cache.py
space_robotics_bench/: __init__.py  __main__.py  paths.py
space_robotics_bench/assets/: __init__.py
space_robotics_bench/assets/light/: sky.py  sunlight.py
space_robotics_bench/assets/object/: __init__.py  asteroid.py  debris.py  lunar_rock_procgen.py  martian_rock_procgen.py  peg_in_hole_procgen.py  rock_procgen.py
space_robotics_bench/assets/robot/: __init__.py  anymal.py  canadarm3_large.py  cubesat.py  franka.py  ingenuity.py  perseverance.py
space_robotics_bench/assets/terrain/: __init__.py  ground_plane.py  lunar_surface_procgen.py  martian_surface_procgen.py  planetary_surface.py  surface.py
space_robotics_bench/assets/vehicle/: __init__.py  construction_rover.py  gateway.py
space_robotics_bench/core/actions/: __init__.py  aerial.py  locomotion.py  mobile.py  spacecraft.py
space_robotics_bench/core/asset/: __init__.py  asset.py  asset_type.py  object.py  terrain.py  vehicle.py
space_robotics_bench/core/envs/: __init__.py  cfg.py
space_robotics_bench/core/interfaces/: __init__.py  gui.py  ros2.py
space_robotics_bench/core/markers/: frame_marker.py
space_robotics_bench/core/mdp/: events.py  observations.py
space_robotics_bench/core/teleop_devices/: combined.py  se3_keyboard.py  se3_ros2.py  se3_spacemouse.py  se3_touch.py
space_robotics_bench/core/wrappers/: dreamerv3.py  sb3.py
space_robotics_bench/envs/: __init__.py
space_robotics_bench/envs/aerial/: cfg.py  impl.py
space_robotics_bench/envs/locomotion/: cfg.py  impl.py
space_robotics_bench/envs/manipulation/: cfg.py  impl.py
space_robotics_bench/envs/mobile/: cfg.py  impl.py
space_robotics_bench/envs/spacecraft/: cfg.py  impl.py
space_robotics_bench/tasks/debris_capture/: task.py
space_robotics_bench/tasks/locomotion/: __init__.py  task.py
space_robotics_bench/tasks/peg_in_hole/: task.py
space_robotics_bench/tasks/peg_in_hole_multi/: task.py
space_robotics_bench/tasks/sample_collection/: task.py
space_robotics_bench/tasks/sample_collection_multi/: task.py
space_robotics_bench/tasks/solar_panel_assembly/: task.py
space_robotics_bench/utils/: __init__.py  cfg.py  color.py  image_proc.py  importer.py  isaacsim.py  logging.py  parsing.py  registry.py  ros.py  sampling.py  str.py  traceback.py  tracing.py
srb/: __init__.py  __main__.py  paths.py
srb/_typing/: __init__.py  cfg.py  state.py
srb/asset/light/: sky.py  sunlight.py
srb/asset/object/: __init__.py  asteroid.py  cubesat_debris.py  peg_in_hole.py  peg_in_hole_procgen.py  peg_in_hole_profile.py  rock_procgen.py  sample_tube.py  shape.py  solar_panel.py
srb/asset/terrain/: __init__.py  ground_plane.py  planetary_surface.py
srb/assets/: __init__.py
srb/assets/light/: sky.py  sunlight.py
srb/assets/object/: __init__.py  asteroid.py  bolt_and_nut.py  debris.py  juggling_ball.py  peg_in_hole.py  peg_in_hole_procgen.py  peg_in_hole_profile.py  rock_procgen.py  sample_tube.py  solar_panel.py
srb/assets/robot/: __init__.py
srb/assets/scenery/: __init__.py  facility.py  lab.py  test_site.py
srb/assets/terrain/: __init__.py  planetary_surface.py
srb/core/action/: __init__.py  action_group.py
srb/core/actions/: __init__.py  action_group.py
srb/core/actuators/: __init__.py
srb/core/app/: __init__.py
srb/core/asset/: __init__.py  asset.py  asset_variant.py
srb/core/controller/: __init__.py
srb/core/env/: __init__.py
srb/core/envs/: __init__.py
srb/core/interfaces/: gui.py  ros2.py
srb/core/manager/: __init__.py
srb/core/marker/: __init__.py
srb/core/markers/: frame_marker.py
srb/core/mdp/: __init__.py  events.py  observations.py
srb/core/sensor/: __init__.py
srb/core/teleop_devices/: __init__.py  cb_keyboard.py  combined.py  haptic.py  keyboard.py  ros2.py  se3_ros2.py  se3_spacemouse.py  se3_touch.py  spacemouse.py
srb/core/visuals/: cfg.py
srb/core/wrappers/: dreamerv3.py
srb/env/aerial/: cfg.py  impl.py
srb/env/locomotion/: cfg.py  impl.py
srb/env/manipulation/: cfg.py  impl.py
srb/env/mobile/: cfg.py  impl.py
srb/env/spacecraft/: cfg.py  impl.py
srb/envs/aerial/: cfg.py
srb/interfaces/: gui.py  interface_type.py  ros2.py  teleop_device.py
srb/tasks/: __init__.py
srb/utils/: __init__.py  camera.py  cfg.py  color.py  dict.py  hydra.py  image_proc.py  isaacsim.py  logging.py  math.py  nucleus.py  parsing.py  path.py  registry.py  ros.py  ros2.py  rtx_settings.py  sampling.py  spaces.py  str.py  subprocess.py  tracing.py  usd.py  visual.py
tests/: cli_agent_rand_test.py  cli_agent_test.py  cli_list_test.py  cli_ls_test.py  import_test.py  rand_agent_test.py
(+401 files in other folders)
