[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
env = ["SRB_SKIP_REGISTRATION=true"]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"

[project]
name = "space_robotics_bench"
version = "0.0.1"
description = "Comprehensive benchmark for space robotics"
authors = [{ name = "Andrej Orsula", email = "orsula.andrej@gmail.com" }]
maintainers = [{ name = "Andrej Orsula", email = "orsula.andrej@gmail.com" }]
urls = { Repository = "https://github.com/AndrejOrsula/space_robotics_bench", Documentation = "https://AndrejOrsula.github.io/space_robotics_bench" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Framework :: Robot Framework",
]
keywords = ["benchmark", "robotics", "simulation", "space"]
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = "==3.10.*"
dependencies = [
  # TODO: Enable dependencies
  # ## Assets
  # "simforge~=0.1",
  # "simforge_foundry~=0.1",
  # ## Simulation
  # "oxidasim~=0.1",
  ## Typing
  "pydantic~=2.0",
]

[project.optional-dependencies]
all = [
  ## Algorithms
  "space_robotics_bench[dreamerv3]",
  "space_robotics_bench[robomimic]",
  "space_robotics_bench[sb3]",
  ## Hardware
  "space_robotics_bench[spacemouse]",
  ## Utils
  "space_robotics_bench[tables]",
  "space_robotics_bench[tests]",
  "space_robotics_bench[traceback]",
]
## Algorithms
dreamerv3 = [
  "dreamerv3@git+https://github.com/AndrejOrsula/dreamerv3.git@58bd8ff875077a859b68f9ad94d89129d4f8dd68",
]
robomimic = [
  "robomimic@git+https://github.com/ARISE-Initiative/robomimic.git@29d6ca229dec3327f87b54cf1688a94177f92af6",
]
sb3 = ["stable-baselines3~=2.3", "sb3-contrib~=2.3"]
## Hardware
spacemouse = ["pyspacemouse~=1.1"]
## Utils
tables = ["prettytable~=3.0"]
tests = ["pytest~=8.0"]
traceback = ["rich~=13.0"]

# [project.scripts]
# space_robotics_bench = "space_robotics_bench.__main__:main"
# srb = "space_robotics_bench.__main__:main"
