[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
env = ["SRB_SKIP_REGISTRATION=true"]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"

[project]
name = "srb"
version = "0.0.1"
description = "Space Robotics Bench"
authors = [{ name = "Andrej Orsula", email = "orsula.andrej@gmail.com" }]
maintainers = [{ name = "Andrej Orsula", email = "orsula.andrej@gmail.com" }]
urls = { Repository = "https://github.com/AndrejOrsula/space_robotics_bench", Documentation = "https://AndrejOrsula.github.io/space_robotics_bench" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Framework :: Robot Framework",
]
keywords = ["benchmark", "robotics", "simulation", "space"]
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = "==3.10.*"
dependencies = [
  ## Core
  "gymnasium~=0.29",
  ## Simulation
  # TODO: Add isaac lab to dependencies
  "oxidasim~=0.1",
  ## Assets
  "simforge~=0.1",
  ## Typing
  "pydantic~=2.0",
]

[project.optional-dependencies]
all = [
  ## Algorithms
  "srb[algo]",
  ## Hardware
  "srb[hw]",
  ## Logging
  "srb[logging]",
  ## Utils
  "srb[cli]",
  "srb[dev]",
]
## Algorithms
algo = ["srb[dreamer]", "srb[sb3]", "srb[sbx]", "srb[skrl]", "srb[robomimic]"]
dreamer = [
  "dreamer@git+https://github.com/danijar/dreamerv3.git@55c8c67c956fbdace4bf8b594ea12e934a3ae4ba",
]
sb3 = [
  "stable-baselines3~=2.4",
  "sb3-contrib~=2.4",
  # Note: This fork relaxes the dependency for gymnasium (shimmy requires gymnasium>=1.0)
  "rl_zoo3@git+https://github.com/AndrejOrsula/rl-baselines3-zoo.git@e04921b4ccbadbc9f6bcc46cc1787ffc1d2c8963",
]
sbx = ["sbx-rl~=0.19"]
skrl = ["skrl~=1.4"]
robomimic = [
  # "robomimic@git+https://github.com/ARISE-Initiative/robomimic.git@29d6ca229dec3327f87b54cf1688a94177f92af6",
]
## Hardware
hw = ["srb[spacemouse]"]
spacemouse = ["pyspacemouse~=1.0"]
## Logging
logging = ["srb[wandb]", "srb[tensorboard]"]
wandb = ["wandb~=0.19"]
tensorboard = ["tensorboard~=2.0", "tensorflow~=2.0"]
## Utils
cli = ["srb[rich]", "argcomplete~=1.0"]
dev = ["srb[test]", "srb[tracing]", "devtools~=0.12"]
rich = ["rich~=13.0"]
test = ["pytest~=8.0"]
tracing = ["srb[rich]", "logfire~=2.0"]

[project.scripts]
space_robotics_bench = "srb.__main__:main"
srb = "srb.__main__:main"
